MHPAnalysis/src/QParJavaParser.java
/* QParJavaParser.java */
/* Generated By:JavaCC: Do not edit this line. QParJavaParser.java */
import syntaxtree.*;


@SuppressWarnings("all")
public class QParJavaParser implements QParJavaParserConstants {
  static final public Goal Goal() throws ParseException {MainClass n0;
   NodeListOptional n1 = new NodeListOptional();
   TypeDeclaration n2;
   NodeListOptional n3 = new NodeListOptional();
   Query n4;
   NodeToken n5;
   Token n6;
    n0 = MainClass();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASS:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      n2 = TypeDeclaration();
n1.addNode(n2);
    }
n1.nodes.trimToSize();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SCOMMENT1:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      n4 = Query();
n3.addNode(n4);
    }
n3.nodes.trimToSize();
    n6 = jj_consume_token(0);
n6.beginColumn++; n6.endColumn++;
      n5 = JTBToolkit.makeNodeToken(n6);
{if ("" != null) return new Goal(n0,n1,n3,n5);}
    throw new Error("Missing return statement in function");
}

  static final public MainClass MainClass() throws ParseException {NodeToken n0;
   Token n1;
   Identifier n2;
   NodeToken n3;
   Token n4;
   NodeToken n5;
   Token n6;
   NodeToken n7;
   Token n8;
   NodeToken n9;
   Token n10;
   NodeToken n11;
   Token n12;
   NodeToken n13;
   Token n14;
   NodeToken n15;
   Token n16;
   NodeToken n17;
   Token n18;
   NodeToken n19;
   Token n20;
   Identifier n21;
   NodeToken n22;
   Token n23;
   NodeToken n24;
   Token n25;
   NodeToken n26;
   Token n27;
   NodeToken n28;
   Token n29;
   NodeListOptional n30 = new NodeListOptional();
   VarDeclaration n31;
   NodeListOptional n32 = new NodeListOptional();
   QParStatement n33;
   NodeToken n34;
   Token n35;
   NodeToken n36;
   Token n37;
   NodeToken n38;
   Token n39;
   Identifier n40;
   Identifier n41;
   NodeToken n42;
   Token n43;
   NodeToken n44;
   Token n45;
   NodeToken n46;
   Token n47;
   NodeToken n48;
   Token n49;
   NodeToken n50;
   Token n51;
    n1 = jj_consume_token(CLASS);
n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Identifier();
    n4 = jj_consume_token(LBRACE);
n3 = JTBToolkit.makeNodeToken(n4);
    n6 = jj_consume_token(PUBLIC);
n5 = JTBToolkit.makeNodeToken(n6);
    n8 = jj_consume_token(STATIC);
n7 = JTBToolkit.makeNodeToken(n8);
    n10 = jj_consume_token(VOID);
n9 = JTBToolkit.makeNodeToken(n10);
    n12 = jj_consume_token(MAIN);
n11 = JTBToolkit.makeNodeToken(n12);
    n14 = jj_consume_token(LPAREN);
n13 = JTBToolkit.makeNodeToken(n14);
    n16 = jj_consume_token(STRING);
n15 = JTBToolkit.makeNodeToken(n16);
    n18 = jj_consume_token(LSQPAREN);
n17 = JTBToolkit.makeNodeToken(n18);
    n20 = jj_consume_token(RSQPAREN);
n19 = JTBToolkit.makeNodeToken(n20);
    n21 = Identifier();
    n23 = jj_consume_token(RPAREN);
n22 = JTBToolkit.makeNodeToken(n23);
    n25 = jj_consume_token(LBRACE);
n24 = JTBToolkit.makeNodeToken(n25);
    n27 = jj_consume_token(TRY);
n26 = JTBToolkit.makeNodeToken(n27);
    n29 = jj_consume_token(LBRACE);
n28 = JTBToolkit.makeNodeToken(n29);
    label_3:
    while (true) {
      if (jj_2_1(2147483647)) {
        ;
      } else {
        break label_3;
      }
      n31 = VarDeclaration();
n30.addNode(n31);
    }
n30.nodes.trimToSize();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case SYNCH:
      case PRINT:
      case SCOMMENT1:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_4;
      }
      n33 = QParStatement();
n32.addNode(n33);
    }
n32.nodes.trimToSize();
    n35 = jj_consume_token(RBRACE);
n34 = JTBToolkit.makeNodeToken(n35);
    n37 = jj_consume_token(CATCH);
n36 = JTBToolkit.makeNodeToken(n37);
    n39 = jj_consume_token(LPAREN);
n38 = JTBToolkit.makeNodeToken(n39);
    n40 = Identifier();
    n41 = Identifier();
    n43 = jj_consume_token(RPAREN);
n42 = JTBToolkit.makeNodeToken(n43);
    n45 = jj_consume_token(LBRACE);
n44 = JTBToolkit.makeNodeToken(n45);
    n47 = jj_consume_token(RBRACE);
n46 = JTBToolkit.makeNodeToken(n47);
    n49 = jj_consume_token(RBRACE);
n48 = JTBToolkit.makeNodeToken(n49);
    n51 = jj_consume_token(RBRACE);
n50 = JTBToolkit.makeNodeToken(n51);
{if ("" != null) return new MainClass(n0,n2,n3,n5,n7,n9,n11,n13,n15,n17,n19,n21,n22,n24,n26,n28,n30,n32,n34,n36,n38,n40,n41,n42,n44,n46,n48,n50);}
    throw new Error("Missing return statement in function");
}

  static final public TypeDeclaration TypeDeclaration() throws ParseException {NodeChoice n0;
   ClassDeclaration n1;
   ClassExtendsDeclaration n2;
    if (jj_2_2(3)) {
      n1 = ClassDeclaration();
n0 = new NodeChoice(n1, 0);
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASS:{
        n2 = ClassExtendsDeclaration();
n0 = new NodeChoice(n2, 1);
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return new TypeDeclaration(n0);}
    throw new Error("Missing return statement in function");
}

  static final public ClassDeclaration ClassDeclaration() throws ParseException {NodeToken n0;
   Token n1;
   Identifier n2;
   NodeToken n3;
   Token n4;
   NodeListOptional n5 = new NodeListOptional();
   VarDeclaration n6;
   NodeToken n7;
   Token n8;
    n1 = jj_consume_token(CLASS);
n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Identifier();
    n4 = jj_consume_token(LBRACE);
n3 = JTBToolkit.makeNodeToken(n4);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_5;
      }
      n6 = VarDeclaration();
n5.addNode(n6);
    }
n5.nodes.trimToSize();
    n8 = jj_consume_token(RBRACE);
n7 = JTBToolkit.makeNodeToken(n8);
{if ("" != null) return new ClassDeclaration(n0,n2,n3,n5,n7);}
    throw new Error("Missing return statement in function");
}

  static final public ClassExtendsDeclaration ClassExtendsDeclaration() throws ParseException {NodeToken n0;
   Token n1;
   Identifier n2;
   NodeToken n3;
   Token n4;
   NodeToken n5;
   Token n6;
   NodeToken n7;
   Token n8;
   NodeListOptional n9 = new NodeListOptional();
   VarDeclaration n10;
   NodeListOptional n11 = new NodeListOptional();
   MethodDeclaration n12;
   NodeToken n13;
   Token n14;
    n1 = jj_consume_token(CLASS);
n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Identifier();
    n4 = jj_consume_token(EXTENDS);
n3 = JTBToolkit.makeNodeToken(n4);
    n6 = jj_consume_token(THREAD);
n5 = JTBToolkit.makeNodeToken(n6);
    n8 = jj_consume_token(LBRACE);
n7 = JTBToolkit.makeNodeToken(n8);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_6;
      }
      n10 = VarDeclaration();
n9.addNode(n10);
    }
n9.nodes.trimToSize();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PUBLIC:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_7;
      }
      n12 = MethodDeclaration();
n11.addNode(n12);
    }
n11.nodes.trimToSize();
    n14 = jj_consume_token(RBRACE);
n13 = JTBToolkit.makeNodeToken(n14);
{if ("" != null) return new ClassExtendsDeclaration(n0,n2,n3,n5,n7,n9,n11,n13);}
    throw new Error("Missing return statement in function");
}

  static final public VarDeclaration VarDeclaration() throws ParseException {Type n0;
   Identifier n1;
   NodeToken n2;
   Token n3;
    n0 = Type();
    n1 = Identifier();
    n3 = jj_consume_token(SEMICOLON);
n2 = JTBToolkit.makeNodeToken(n3);
{if ("" != null) return new VarDeclaration(n0,n1,n2);}
    throw new Error("Missing return statement in function");
}

  static final public MethodDeclaration MethodDeclaration() throws ParseException {NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   NodeToken n4;
   Token n5;
   NodeToken n6;
   Token n7;
   NodeToken n8;
   Token n9;
   NodeToken n10;
   Token n11;
   NodeToken n12;
   Token n13;
   NodeToken n14;
   Token n15;
   NodeListOptional n16 = new NodeListOptional();
   VarDeclaration n17;
   NodeListOptional n18 = new NodeListOptional();
   QParStatement n19;
   NodeToken n20;
   Token n21;
   NodeToken n22;
   Token n23;
   NodeToken n24;
   Token n25;
   Identifier n26;
   Identifier n27;
   NodeToken n28;
   Token n29;
   NodeToken n30;
   Token n31;
   NodeToken n32;
   Token n33;
   NodeToken n34;
   Token n35;
    n1 = jj_consume_token(PUBLIC);
n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(VOID);
n2 = JTBToolkit.makeNodeToken(n3);
    n5 = jj_consume_token(RUN);
n4 = JTBToolkit.makeNodeToken(n5);
    n7 = jj_consume_token(LPAREN);
n6 = JTBToolkit.makeNodeToken(n7);
    n9 = jj_consume_token(RPAREN);
n8 = JTBToolkit.makeNodeToken(n9);
    n11 = jj_consume_token(LBRACE);
n10 = JTBToolkit.makeNodeToken(n11);
    n13 = jj_consume_token(TRY);
n12 = JTBToolkit.makeNodeToken(n13);
    n15 = jj_consume_token(LBRACE);
n14 = JTBToolkit.makeNodeToken(n15);
    label_8:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_8;
      }
      n17 = VarDeclaration();
n16.addNode(n17);
    }
n16.nodes.trimToSize();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case SYNCH:
      case PRINT:
      case SCOMMENT1:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_9;
      }
      n19 = QParStatement();
n18.addNode(n19);
    }
n18.nodes.trimToSize();
    n21 = jj_consume_token(RBRACE);
n20 = JTBToolkit.makeNodeToken(n21);
    n23 = jj_consume_token(CATCH);
n22 = JTBToolkit.makeNodeToken(n23);
    n25 = jj_consume_token(LPAREN);
n24 = JTBToolkit.makeNodeToken(n25);
    n26 = Identifier();
    n27 = Identifier();
    n29 = jj_consume_token(RPAREN);
n28 = JTBToolkit.makeNodeToken(n29);
    n31 = jj_consume_token(LBRACE);
n30 = JTBToolkit.makeNodeToken(n31);
    n33 = jj_consume_token(RBRACE);
n32 = JTBToolkit.makeNodeToken(n33);
    n35 = jj_consume_token(RBRACE);
n34 = JTBToolkit.makeNodeToken(n35);
{if ("" != null) return new MethodDeclaration(n0,n2,n4,n6,n8,n10,n12,n14,n16,n18,n20,n22,n24,n26,n27,n28,n30,n32,n34);}
    throw new Error("Missing return statement in function");
}

  static final public Type Type() throws ParseException {NodeChoice n0;
   BooleanType n1;
   IntegerType n2;
   Identifier n3;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case BOOLEAN:{
      n1 = BooleanType();
n0 = new NodeChoice(n1, 0);
      break;
      }
    case INTEGER:{
      n2 = IntegerType();
n0 = new NodeChoice(n2, 1);
      break;
      }
    case IDENTIFIER:{
      n3 = Identifier();
n0 = new NodeChoice(n3, 2);
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return new Type(n0);}
    throw new Error("Missing return statement in function");
}

  static final public BooleanType BooleanType() throws ParseException {NodeToken n0;
   Token n1;
    n1 = jj_consume_token(BOOLEAN);
n0 = JTBToolkit.makeNodeToken(n1);
{if ("" != null) return new BooleanType(n0);}
    throw new Error("Missing return statement in function");
}

  static final public IntegerType IntegerType() throws ParseException {NodeToken n0;
   Token n1;
    n1 = jj_consume_token(INTEGER);
n0 = JTBToolkit.makeNodeToken(n1);
{if ("" != null) return new IntegerType(n0);}
    throw new Error("Missing return statement in function");
}

  static final public QParStatement QParStatement() throws ParseException {NodeListOptional n0 = new NodeListOptional();
   Ann n1;
   Statement n2;
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SCOMMENT1:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_10;
      }
      n1 = Ann();
n0.addNode(n1);
    }
n0.nodes.trimToSize();
    n2 = Statement();
{if ("" != null) return new QParStatement(n0,n2);}
    throw new Error("Missing return statement in function");
}

  static final public Ann Ann() throws ParseException {NodeToken n0;
   Token n1;
   Label n2;
   NodeToken n3;
   Token n4;
    n1 = jj_consume_token(SCOMMENT1);
n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Label();
    n4 = jj_consume_token(SCOMMENT2);
n3 = JTBToolkit.makeNodeToken(n4);
{if ("" != null) return new Ann(n0,n2,n3);}
    throw new Error("Missing return statement in function");
}

  static final public Label Label() throws ParseException {Identifier n0;
   NodeToken n1;
   Token n2;
    n0 = Identifier();
    n2 = jj_consume_token(COLON);
n1 = JTBToolkit.makeNodeToken(n2);
{if ("" != null) return new Label(n0,n1);}
    throw new Error("Missing return statement in function");
}

  static final public Statement Statement() throws ParseException {NodeChoice n0;
   Block n1;
   AssignmentStatement n2;
   FieldAssignmentStatement n3;
   IfStatement n4;
   WhileStatement n5;
   MessageSend n6;
   PrintStatement n7;
   SynchStatement n8;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LBRACE:{
      n1 = Block();
n0 = new NodeChoice(n1, 0);
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      if (jj_2_4(2)) {
        n2 = AssignmentStatement();
n0 = new NodeChoice(n2, 1);
      } else if (jj_2_5(2147483647)) {
        n3 = FieldAssignmentStatement();
n0 = new NodeChoice(n3, 2);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IF:{
          n4 = IfStatement();
n0 = new NodeChoice(n4, 3);
          break;
          }
        case WHILE:{
          n5 = WhileStatement();
n0 = new NodeChoice(n5, 4);
          break;
          }
        case IDENTIFIER:{
          n6 = MessageSend();
n0 = new NodeChoice(n6, 5);
          break;
          }
        case PRINT:{
          n7 = PrintStatement();
n0 = new NodeChoice(n7, 6);
          break;
          }
        case SYNCH:{
          n8 = SynchStatement();
n0 = new NodeChoice(n8, 7);
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
{if ("" != null) return new Statement(n0);}
    throw new Error("Missing return statement in function");
}

  static final public Block Block() throws ParseException {NodeToken n0;
   Token n1;
   NodeListOptional n2 = new NodeListOptional();
   QParStatement n3;
   NodeToken n4;
   Token n5;
    n1 = jj_consume_token(LBRACE);
n0 = JTBToolkit.makeNodeToken(n1);
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case SYNCH:
      case PRINT:
      case SCOMMENT1:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_11;
      }
      n3 = QParStatement();
n2.addNode(n3);
    }
n2.nodes.trimToSize();
    n5 = jj_consume_token(RBRACE);
n4 = JTBToolkit.makeNodeToken(n5);
{if ("" != null) return new Block(n0,n2,n4);}
    throw new Error("Missing return statement in function");
}

  static final public AssignmentStatement AssignmentStatement() throws ParseException {Identifier n0;
   NodeToken n1;
   Token n2;
   Expression n3;
   NodeToken n4;
   Token n5;
    n0 = Identifier();
    n2 = jj_consume_token(ASSIGN);
n1 = JTBToolkit.makeNodeToken(n2);
    n3 = Expression();
    n5 = jj_consume_token(SEMICOLON);
n4 = JTBToolkit.makeNodeToken(n5);
{if ("" != null) return new AssignmentStatement(n0,n1,n3,n4);}
    throw new Error("Missing return statement in function");
}

  static final public FieldAssignmentStatement FieldAssignmentStatement() throws ParseException {Identifier n0;
   NodeToken n1;
   Token n2;
   Identifier n3;
   NodeToken n4;
   Token n5;
   Identifier n6;
   NodeToken n7;
   Token n8;
    n0 = Identifier();
    n2 = jj_consume_token(DOT);
n1 = JTBToolkit.makeNodeToken(n2);
    n3 = Identifier();
    n5 = jj_consume_token(ASSIGN);
n4 = JTBToolkit.makeNodeToken(n5);
    n6 = Identifier();
    n8 = jj_consume_token(SEMICOLON);
n7 = JTBToolkit.makeNodeToken(n8);
{if ("" != null) return new FieldAssignmentStatement(n0,n1,n3,n4,n6,n7);}
    throw new Error("Missing return statement in function");
}

  static final public IfStatement IfStatement() throws ParseException {NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Identifier n4;
   NodeToken n5;
   Token n6;
   Statement n7;
   NodeToken n8;
   Token n9;
   Statement n10;
    n1 = jj_consume_token(IF);
n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(LPAREN);
n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Identifier();
    n6 = jj_consume_token(RPAREN);
n5 = JTBToolkit.makeNodeToken(n6);
    n7 = Statement();
    n9 = jj_consume_token(ELSE);
n8 = JTBToolkit.makeNodeToken(n9);
    n10 = Statement();
{if ("" != null) return new IfStatement(n0,n2,n4,n5,n7,n8,n10);}
    throw new Error("Missing return statement in function");
}

  static final public WhileStatement WhileStatement() throws ParseException {NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Identifier n4;
   NodeToken n5;
   Token n6;
   Statement n7;
    n1 = jj_consume_token(WHILE);
n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(LPAREN);
n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Identifier();
    n6 = jj_consume_token(RPAREN);
n5 = JTBToolkit.makeNodeToken(n6);
    n7 = Statement();
{if ("" != null) return new WhileStatement(n0,n2,n4,n5,n7);}
    throw new Error("Missing return statement in function");
}

  static final public SynchStatement SynchStatement() throws ParseException {NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Identifier n4;
   NodeToken n5;
   Token n6;
   Statement n7;
    n1 = jj_consume_token(SYNCH);
n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(LPAREN);
n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Identifier();
    n6 = jj_consume_token(RPAREN);
n5 = JTBToolkit.makeNodeToken(n6);
    n7 = Statement();
{if ("" != null) return new SynchStatement(n0,n2,n4,n5,n7);}
    throw new Error("Missing return statement in function");
}

  static final public PrintStatement PrintStatement() throws ParseException {NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Identifier n4;
   NodeToken n5;
   Token n6;
   NodeToken n7;
   Token n8;
    n1 = jj_consume_token(PRINT);
n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(LPAREN);
n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Identifier();
    n6 = jj_consume_token(RPAREN);
n5 = JTBToolkit.makeNodeToken(n6);
    n8 = jj_consume_token(SEMICOLON);
n7 = JTBToolkit.makeNodeToken(n8);
{if ("" != null) return new PrintStatement(n0,n2,n4,n5,n7);}
    throw new Error("Missing return statement in function");
}

  static final public Expression Expression() throws ParseException {NodeChoice n0;
   AndExpression n1;
   CompareExpression n2;
   PlusExpression n3;
   MinusExpression n4;
   TimesExpression n5;
   FieldRead n6;
   PrimaryExpression n7;
    if (jj_2_6(2147483647)) {
      n1 = AndExpression();
n0 = new NodeChoice(n1, 0);
    } else if (jj_2_7(2147483647)) {
      n2 = CompareExpression();
n0 = new NodeChoice(n2, 1);
    } else if (jj_2_8(2147483647)) {
      n3 = PlusExpression();
n0 = new NodeChoice(n3, 2);
    } else if (jj_2_9(2147483647)) {
      n4 = MinusExpression();
n0 = new NodeChoice(n4, 3);
    } else if (jj_2_10(2147483647)) {
      n5 = TimesExpression();
n0 = new NodeChoice(n5, 4);
    } else if (jj_2_11(2147483647)) {
      n6 = FieldRead();
n0 = new NodeChoice(n6, 5);
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NOT:
      case FALSE:
      case NEW:
      case THIS:
      case TRUE:
      case INTEGER_LITERAL:
      case IDENTIFIER:{
        n7 = PrimaryExpression();
n0 = new NodeChoice(n7, 6);
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return new Expression(n0);}
    throw new Error("Missing return statement in function");
}

  static final public AndExpression AndExpression() throws ParseException {Identifier n0;
   NodeToken n1;
   Token n2;
   Identifier n3;
    n0 = Identifier();
    n2 = jj_consume_token(AND);
n1 = JTBToolkit.makeNodeToken(n2);
    n3 = Identifier();
{if ("" != null) return new AndExpression(n0,n1,n3);}
    throw new Error("Missing return statement in function");
}

  static final public CompareExpression CompareExpression() throws ParseException {Identifier n0;
   NodeToken n1;
   Token n2;
   Identifier n3;
    n0 = Identifier();
    n2 = jj_consume_token(LT);
n1 = JTBToolkit.makeNodeToken(n2);
    n3 = Identifier();
{if ("" != null) return new CompareExpression(n0,n1,n3);}
    throw new Error("Missing return statement in function");
}

  static final public PlusExpression PlusExpression() throws ParseException {Identifier n0;
   NodeToken n1;
   Token n2;
   Identifier n3;
    n0 = Identifier();
    n2 = jj_consume_token(PLUS);
n1 = JTBToolkit.makeNodeToken(n2);
    n3 = Identifier();
{if ("" != null) return new PlusExpression(n0,n1,n3);}
    throw new Error("Missing return statement in function");
}
